examples/test/testpolicy17669.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17669
  namespace: namespace475
spec:
  podSelector:
    matchLabels:
      key19: value1
      key41: value21
      key49: value14
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key17: value6
          key29: value31
      podSelector:
        matchLabels:
          key37: value4
          key26: value43
          key10: value25
